--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ cache:
   directories:
     - $HOME/.ivy2/cache
     - $HOME/.sbt/boot/
+    - $TRAVIS_BUILD_DIR/data
 
 script:
   # NOTE: this is just working-test
